syntax = "proto3";

package middleware.proto;

message Request {

    oneof type {

        GetItems getItems = 1;
        GetItem getItem = 2;
        AddItemToCart addItemToCart = 3;
        RemoveItemFromCart removeItemFromCart = 4;
        GetCartItems getCartItems = 5;
        Order order = 6;
        Login login = 7;
        Response response = 8;

    }
    string uuid = 9;
}

message Item {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    bool available = 5;
}

message Response {
    repeated Item items = 1;
    bool status = 2;
}

message GetItems{}

message GetItem{

    oneof type {

        int32 itemId = 1;
        string name = 2;

    }

}

message AddItemToCart{
    int32 userId = 1;
    int32 itemId = 2;
}

message RemoveItemFromCart {
    int32 userId = 1;
    int32 itemId = 2;
}

message GetCartItems {
    int32 userId = 1;
}

message Order {
    int32 userId = 1;
}

message Login {
    string username = 1;
    string password = 2;
}